--- a/RTRS/RTRS/Base.lproj/LaunchScreen.storyboard
+++ b/RTRS/RTRS/Base.lproj/LaunchScreen.storyboard
@@ -1,40 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="4nK-k2-l7M">
+    <device id="retina3_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="EHf-IW-A2E">
+        <scene sceneID="IzJ-42-RKr">
             <objects>
-                <viewController id="01J-lp-oVM" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                <viewController id="4nK-k2-l7M" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Aev-LF-xQi">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="RickyLogo" translatesAutoresizingMaskIntoConstraints="NO" id="beO-5z-TDv">
-                                <rect key="frame" x="0.0" y="-132" width="414" height="1060"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="RickyLogo" translatesAutoresizingMaskIntoConstraints="NO" id="zvF-Yz-V5A">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="370"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="DraftKings" translatesAutoresizingMaskIntoConstraints="NO" id="vQ4-gc-WvM">
+                                <rect key="frame" x="69" y="370" width="182" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="t7s-dK-XnY"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="beO-5z-TDv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="JEM-Sg-pm9"/>
-                            <constraint firstItem="beO-5z-TDv" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-50" id="auF-d0-RiW"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="beO-5z-TDv" secondAttribute="trailing" constant="1.1368683772161603e-13" id="dGA-yV-jX2"/>
+                            <constraint firstItem="vQ4-gc-WvM" firstAttribute="centerX" secondItem="TmP-cB-qs3" secondAttribute="centerX" id="7Il-jU-WKT"/>
+                            <constraint firstItem="TmP-cB-qs3" firstAttribute="bottom" secondItem="vQ4-gc-WvM" secondAttribute="bottom" constant="10" id="TZf-Cr-8de"/>
+                            <constraint firstItem="vQ4-gc-WvM" firstAttribute="top" secondItem="zvF-Yz-V5A" secondAttribute="bottom" id="euU-2E-pU4"/>
+                            <constraint firstItem="zvF-Yz-V5A" firstAttribute="trailing" secondItem="TmP-cB-qs3" secondAttribute="trailing" id="gNx-Qd-uIQ"/>
+                            <constraint firstItem="zvF-Yz-V5A" firstAttribute="leading" secondItem="TmP-cB-qs3" secondAttribute="leading" id="iQr-iQ-NcT"/>
+                            <constraint firstItem="zvF-Yz-V5A" firstAttribute="top" secondItem="TmP-cB-qs3" secondAttribute="top" id="kC8-zZ-qgA"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <viewLayoutGuide key="safeArea" id="TmP-cB-qs3"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DAO-SZ-csz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="58" y="392"/>
+            <point key="canvasLocation" x="50.625" y="350.7042253521127"/>
         </scene>
     </scenes>
     <resources>
+        <image name="DraftKings" width="182" height="122"/>
         <image name="RickyLogo" width="425" height="530"/>
     </resources>
 </document>
