--- a/RTRS/RTRS/Base.lproj/Main.storyboard
+++ b/RTRS/RTRS/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="O8S-Jp-9LQ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="O8S-Jp-9LQ">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -107,6 +107,7 @@ POD</string>
                         <segue destination="bOP-We-QCa" kind="show" identifier="AU's Corner" id="7U1-RO-DoR"/>
                         <segue destination="bOP-We-QCa" kind="show" identifier="The Pod" id="Zeb-4G-3Q6"/>
                         <segue destination="bOP-We-QCa" kind="show" identifier="Normal Column" id="BWH-bX-Mxo"/>
+                        <segue destination="bOP-We-QCa" kind="show" identifier="MOC" id="KGJ-Ee-2ND"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2k6-do-H75" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -137,7 +138,7 @@ POD</string>
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="153"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="s4z-kF-mig">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="s4z-kF-mig">
                                             <rect key="frame" x="15" y="11" width="150" height="131"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="150" id="SpQ-mD-Rwq"/>
@@ -224,16 +225,16 @@ POD</string>
             </objects>
             <point key="canvasLocation" x="986" y="2261"/>
         </scene>
-        <!--Corner Article View Controller-->
+        <!--Article View Controller-->
         <scene sceneID="Ohz-tD-fVP">
             <objects>
-                <viewController storyboardIdentifier="SingleArticle" id="TLI-CJ-GAl" customClass="AUCornerArticleViewController" customModule="RTRS" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SingleArticle" id="TLI-CJ-GAl" customClass="ArticleViewController" customModule="RTRS" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="DMu-4e-ITZ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0VL-Nu-n0L">
-                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="769"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8wu-f2-bDP">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="217"/>
@@ -628,7 +629,7 @@ POD</string>
                         <segue destination="e0p-yq-Sqf" kind="show" identifier="About" id="Bvv-Jk-y72"/>
                         <segue destination="61u-pN-KfT" kind="show" identifier="externalweb" id="roz-li-Ohd"/>
                         <segue destination="bOP-We-QCa" kind="show" identifier="Saved" id="cqK-au-f3a"/>
-                        <segue destination="HR5-7T-bWi" kind="show" identifier="Process Pups" id="DW7-VD-uJw"/>
+                        <segue destination="HR5-7T-bWi" kind="show" identifier="Gallery" id="DW7-VD-uJw"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aZW-Ce-yfS" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -789,10 +790,10 @@ POD</string>
             </objects>
             <point key="canvasLocation" x="4422" y="1602"/>
         </scene>
-        <!--Process Pups-->
+        <!--Gallery View Controller-->
         <scene sceneID="9GB-6B-MXg">
             <objects>
-                <viewController id="HR5-7T-bWi" customClass="RTRSProcessPupsViewController" customModule="RTRS" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="HR5-7T-bWi" customClass="GalleryViewController" customModule="RTRS" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="kka-Qu-szg">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -801,10 +802,10 @@ POD</string>
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <subviews>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" usesAttributedText="YES" allowsEditingTextAttributes="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gkK-6N-nT0">
-                                        <rect key="frame" x="20" y="20" width="374" height="174"/>
+                                        <rect key="frame" x="20" y="20" width="374" height="43"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="174" id="Yhb-Nr-cll"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="Yhb-Nr-cll"/>
                                         </constraints>
                                         <attributedString key="attributedText"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -816,10 +817,10 @@ POD</string>
                                         </userDefinedRuntimeAttributes>
                                     </textView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VZi-mG-vas" customClass="MultiPhotoContainerView" customModule="RTRS" customModuleProvider="target">
-                                        <rect key="frame" x="20" y="202" width="374" height="179"/>
+                                        <rect key="frame" x="20" y="71" width="374" height="310"/>
                                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="179" id="b6v-xd-Wi8"/>
+                                            <constraint firstAttribute="height" relation="lessThanOrEqual" constant="310" id="b6v-xd-Wi8"/>
                                         </constraints>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="color" keyPath="layer.borderColor">
@@ -872,8 +873,8 @@ POD</string>
                                             </collectionViewCell>
                                         </cells>
                                     </collectionView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Process Pup Gallery (tap to enlarge):" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="97F-i7-141">
-                                        <rect key="frame" x="20" y="398" width="282" height="20"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Image Gallery (tap to enlarge):" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="97F-i7-141">
+                                        <rect key="frame" x="20" y="398" width="238" height="20"/>
                                         <fontDescription key="fontDescription" name="TrebuchetMS" family="Trebuchet MS" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -908,7 +909,7 @@ POD</string>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="xcH-0x-NxV"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Process Pups" id="HAZ-2b-QKa"/>
+                    <navigationItem key="navigationItem" id="HAZ-2b-QKa"/>
                     <connections>
                         <outlet property="collectionView" destination="XaZ-9z-9SJ" id="L9L-pL-Huv"/>
                         <outlet property="descriptionTextView" destination="gkK-6N-nT0" id="jgx-3L-KGh"/>
@@ -964,8 +965,8 @@ POD</string>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Doggo text" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="VTl-8I-5Qr">
-                                <rect key="frame" x="20" y="539" width="374" height="323"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="VTl-8I-5Qr">
+                                <rect key="frame" x="20" y="513" width="374" height="349"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -979,8 +980,8 @@ POD</string>
                                     <action selector="dismissButtonPressed:" destination="QsD-fi-Oda" eventType="touchUpInside" id="sdg-Ks-CHg"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Doggo Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xwo-AM-hJ8">
-                                <rect key="frame" x="20" y="503" width="374" height="26"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xwo-AM-hJ8">
+                                <rect key="frame" x="20" y="503" width="374" height="0.0"/>
                                 <fontDescription key="fontDescription" name="TrebuchetMS-Bold" family="Trebuchet MS" pointSize="22"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -1139,7 +1140,7 @@ POD</string>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="cqK-au-f3a"/>
+        <segue reference="KGJ-Ee-2ND"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
     <resources>
